@@ -1,7 +1,10 @@
 package fr.insee.eno.core.processing.out.steps.lunatic.table;
 
 import fr.insee.eno.core.DDIToEno;
+import fr.insee.eno.core.PoguesToEno;
 import fr.insee.eno.core.exceptions.business.DDIParsingException;
+import fr.insee.eno.core.exceptions.business.ParsingException;
+import fr.insee.eno.core.exceptions.business.PoguesDeserializationException;
 import fr.insee.eno.core.model.EnoQuestionnaire;
 import fr.insee.eno.core.model.question.ComplexMultipleChoiceQuestion;
 import fr.insee.eno.core.parameter.EnoParameters;
@@ -20,19 +23,15 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class ComplexMultipleChoiceQuestionProcessingTest {
+abstract class ComplexMultipleChoiceQuestionProcessingTest {
 
     private List<Table> lunaticTableList;
 
     @BeforeAll
-    void complexMCQ_integrationTestFromDDI() throws DDIParsingException {
+    void complexMCQ_integrationTestFromDDI() throws ParsingException {
         // Given
-        EnoQuestionnaire enoQuestionnaire = DDIToEno.transform(
-                ComplexMultipleChoiceQuestionProcessingTest.class.getClassLoader().getResourceAsStream(
-                        "integration/ddi/ddi-mcq.xml"),
-                EnoParameters.of(EnoParameters.Context.DEFAULT, EnoParameters.ModeParameter.CAWI));
-        //
-        List<ComplexMultipleChoiceQuestion> enoMCQList = enoQuestionnaire.getMultipleResponseQuestions().stream()
+        EnoQuestionnaire enoQuestionnaire = mapQuestionnaire();
+        List<ComplexMultipleChoiceQuestion> enoMCQList =  enoQuestionnaire.getMultipleResponseQuestions().stream()
                 .filter(ComplexMultipleChoiceQuestion.class::isInstance)
                 .map(ComplexMultipleChoiceQuestion.class::cast)
                 .toList();
@@ -49,6 +48,28 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         // -> tests
     }
 
+    abstract EnoQuestionnaire mapQuestionnaire() throws ParsingException;
+
+    static class DDITest extends ComplexMultipleChoiceQuestionProcessingTest {
+        @Override
+        EnoQuestionnaire mapQuestionnaire() throws DDIParsingException {
+            return new DDIToEno().transform(
+                    ComplexMultipleChoiceQuestionProcessingTest.class.getClassLoader().getResourceAsStream(
+                            "integration/ddi/ddi-mcq.xml"),
+                    EnoParameters.of(EnoParameters.Context.DEFAULT, EnoParameters.ModeParameter.CAWI));
+        }
+    }
+
+    static class PoguesTest extends ComplexMultipleChoiceQuestionProcessingTest {
+        @Override
+        EnoQuestionnaire mapQuestionnaire() throws PoguesDeserializationException {
+            return new PoguesToEno().transform(
+                    ComplexMultipleChoiceQuestionProcessingTest.class.getClassLoader().getResourceAsStream(
+                            "integration/pogues/pogues-mcq.json"),
+                    EnoParameters.of(EnoParameters.Context.DEFAULT, EnoParameters.ModeParameter.CAWI));
+        }
+    }
+
     @ParameterizedTest
     @ValueSource(ints = {0, 1})
     void simpleLeftColumnCodeList(int i) {
@@ -59,8 +80,8 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         assertEquals(4, lunaticTable.getBodyLines().size());
         lunaticTable.getBodyLines().forEach(bodyLine -> {
             assertEquals(2, bodyLine.getBodyCells().size());
-            assertNotNull(bodyLine.getBodyCells().get(0).getValue());
-            assertNotNull(bodyLine.getBodyCells().get(0).getLabel().getValue());
+            assertNotNull(bodyLine.getBodyCells().getFirst().getValue());
+            assertNotNull(bodyLine.getBodyCells().getFirst().getLabel().getValue());
             assertEquals(5, bodyLine.getBodyCells().get(1).getOptions().size());
         });
     }
@@ -68,7 +89,7 @@ class ComplexMultipleChoiceQuestionProcessingTest {
     @Test
     void simpleLeftColumn_radio() {
         //
-        Table lunaticTable = lunaticTableList.get(0);
+        Table lunaticTable = lunaticTableList.getFirst();
         //
         lunaticTable.getBodyLines().forEach(bodyLine -> {
             assertEquals(2, bodyLine.getBodyCells().size());
@@ -94,7 +115,6 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         Table lunaticTable = lunaticTableList.get(i);
         //
         assertEquals(7, lunaticTable.getBodyLines().size());
-
     }
 
     @ParameterizedTest
@@ -113,23 +133,23 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         Table lunaticTable = lunaticTableList.get(i);
         // Code list labels are present
         lunaticTable.getBodyLines().forEach(bodyLine ->
-                assertNotNull(bodyLine.getBodyCells().get(0).getLabel().getValue()));
+                assertNotNull(bodyLine.getBodyCells().getFirst().getLabel().getValue()));
         // Closer look (first line)
-        assertEquals("c1", lunaticTable.getBodyLines().get(0).getBodyCells().get(0).getValue());
+        assertEquals("c1", lunaticTable.getBodyLines().getFirst().getBodyCells().getFirst().getValue());
         assertEquals("\"Code 1\"",
-                lunaticTable.getBodyLines().get(0).getBodyCells().get(0).getLabel().getValue());
+                lunaticTable.getBodyLines().getFirst().getBodyCells().getFirst().getLabel().getValue());
         assertEquals(LabelTypeEnum.VTL_MD,
-                lunaticTable.getBodyLines().get(0).getBodyCells().get(0).getLabel().getType());
+                lunaticTable.getBodyLines().getFirst().getBodyCells().getFirst().getLabel().getType());
         // Only look at the modality value for the others
-        assertEquals("c2", lunaticTable.getBodyLines().get(1).getBodyCells().get(0).getValue());
+        assertEquals("c2", lunaticTable.getBodyLines().get(1).getBodyCells().getFirst().getValue());
         assertEquals("c21", lunaticTable.getBodyLines().get(1).getBodyCells().get(1).getValue());
-        assertEquals("c22", lunaticTable.getBodyLines().get(2).getBodyCells().get(0).getValue());
-        assertEquals("c3", lunaticTable.getBodyLines().get(3).getBodyCells().get(0).getValue());
+        assertEquals("c22", lunaticTable.getBodyLines().get(2).getBodyCells().getFirst().getValue());
+        assertEquals("c3", lunaticTable.getBodyLines().get(3).getBodyCells().getFirst().getValue());
         assertEquals("c31", lunaticTable.getBodyLines().get(3).getBodyCells().get(1).getValue());
         assertEquals("c311", lunaticTable.getBodyLines().get(3).getBodyCells().get(2).getValue());
-        assertEquals("c312", lunaticTable.getBodyLines().get(4).getBodyCells().get(0).getValue());
-        assertEquals("c313", lunaticTable.getBodyLines().get(5).getBodyCells().get(0).getValue());
-        assertEquals("c32", lunaticTable.getBodyLines().get(6).getBodyCells().get(0).getValue());
+        assertEquals("c312", lunaticTable.getBodyLines().get(4).getBodyCells().getFirst().getValue());
+        assertEquals("c313", lunaticTable.getBodyLines().get(5).getBodyCells().getFirst().getValue());
+        assertEquals("c32", lunaticTable.getBodyLines().get(6).getBodyCells().getFirst().getValue());
     }
 
     @ParameterizedTest
@@ -138,16 +158,16 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         //
         Table lunaticTable = lunaticTableList.get(i);
         //
-        assertEquals(BigInteger.valueOf(3), lunaticTable.getBodyLines().get(0).getBodyCells().get(0).getColspan());
-        assertNull(lunaticTable.getBodyLines().get(1).getBodyCells().get(0).getColspan());
+        assertEquals(BigInteger.valueOf(3), lunaticTable.getBodyLines().getFirst().getBodyCells().getFirst().getColspan());
+        assertNull(lunaticTable.getBodyLines().get(1).getBodyCells().getFirst().getColspan());
         assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(1).getBodyCells().get(1).getColspan());
-        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(2).getBodyCells().get(0).getColspan());
-        assertNull(lunaticTable.getBodyLines().get(3).getBodyCells().get(0).getColspan());
+        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(2).getBodyCells().getFirst().getColspan());
+        assertNull(lunaticTable.getBodyLines().get(3).getBodyCells().getFirst().getColspan());
         assertNull(lunaticTable.getBodyLines().get(3).getBodyCells().get(1).getColspan());
         assertNull(lunaticTable.getBodyLines().get(3).getBodyCells().get(2).getColspan());
-        assertNull(lunaticTable.getBodyLines().get(4).getBodyCells().get(0).getColspan());
-        assertNull(lunaticTable.getBodyLines().get(5).getBodyCells().get(0).getColspan());
-        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(6).getBodyCells().get(0).getColspan());
+        assertNull(lunaticTable.getBodyLines().get(4).getBodyCells().getFirst().getColspan());
+        assertNull(lunaticTable.getBodyLines().get(5).getBodyCells().getFirst().getColspan());
+        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(6).getBodyCells().getFirst().getColspan());
     }
 
     @ParameterizedTest
@@ -156,16 +176,16 @@ class ComplexMultipleChoiceQuestionProcessingTest {
         //
         Table lunaticTable = lunaticTableList.get(i);
         //
-        assertNull(lunaticTable.getBodyLines().get(0).getBodyCells().get(0).getRowspan());
-        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(1).getBodyCells().get(0).getRowspan());
+        assertNull(lunaticTable.getBodyLines().getFirst().getBodyCells().getFirst().getRowspan());
+        assertEquals(BigInteger.valueOf(2), lunaticTable.getBodyLines().get(1).getBodyCells().getFirst().getRowspan());
         assertNull(lunaticTable.getBodyLines().get(1).getBodyCells().get(1).getRowspan());
-        assertNull(lunaticTable.getBodyLines().get(2).getBodyCells().get(0).getRowspan());
-        assertEquals(BigInteger.valueOf(4), lunaticTable.getBodyLines().get(3).getBodyCells().get(0).getRowspan());
+        assertNull(lunaticTable.getBodyLines().get(2).getBodyCells().getFirst().getRowspan());
+        assertEquals(BigInteger.valueOf(4), lunaticTable.getBodyLines().get(3).getBodyCells().getFirst().getRowspan());
         assertEquals(BigInteger.valueOf(3), lunaticTable.getBodyLines().get(3).getBodyCells().get(1).getRowspan());
         assertNull(lunaticTable.getBodyLines().get(3).getBodyCells().get(2).getRowspan());
-        assertNull(lunaticTable.getBodyLines().get(4).getBodyCells().get(0).getRowspan());
-        assertNull(lunaticTable.getBodyLines().get(5).getBodyCells().get(0).getRowspan());
-        assertNull(lunaticTable.getBodyLines().get(6).getBodyCells().get(0).getRowspan());
+        assertNull(lunaticTable.getBodyLines().get(4).getBodyCells().getFirst().getRowspan());
+        assertNull(lunaticTable.getBodyLines().get(5).getBodyCells().getFirst().getRowspan());
+        assertNull(lunaticTable.getBodyLines().get(6).getBodyCells().getFirst().getRowspan());
     }
 
     @ParameterizedTest
@@ -183,5 +203,5 @@ class ComplexMultipleChoiceQuestionProcessingTest {
                     .containsExactlyElementsOf(expectedResponseCellValues);
         });
     }
-    
+
 }
